[package]
name = "elf2nucleus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["derive"] }
clap_complete = "4.4.6"
env_logger = "0.10.1"
ihex = "3.0.0"
log = "0.4.20"
